--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ src="https://youtube.com/embed/CJhE4BYcjh0?si=qciC560eeqQtWvKt?controls=1" class
 </iframe></div>
                             <p>
                                 Git Repo:
-                                <a href="https://github.com/Sans0phobic/Boss-Rush">github.com</a>
+                                <a href="https://github.com/Sans0phobic/Boss-Rush">Boss Rush</a>
                             </p>
                             <p>
                                 Itch.io:
@@ -324,7 +324,7 @@ src="https://youtube.com/embed/b4VnMDg8mSc?si=CDCwChbvxPUIlOVo?controls=1" class
 </iframe></div>
                             <p>
                                 Git Repo:
-                                <a href="https://github.com/Sans0phobic/minimum-viable-product">github.com</a>
+                                <a href="https://github.com/Sans0phobic/minimum-viable-product">Minimum Viable Product</a>
                             </p>
                             <p>
                                 Itch.io:
@@ -420,5 +420,6 @@ src="https://youtube.com/embed/b4VnMDg8mSc?si=CDCwChbvxPUIlOVo?controls=1" class
     window.addEventListener('DOMContentLoaded', loadSavedTab);
 </script>
 </body>
+
 
 </html>
