--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <p>Game development has been a passion of mine since I became interested in games.  Recently I started persuing it, but I haven't had the time to focus on any personal projects.  Playing games has been my way of fun for most of my life; they are my biggest interest, and my biggest goal is to translate what I have inside my head onto a screen.</p>
                     </section>
                     <section class="right-section">
-                        <img src="https://i.pinimg.com/1200x/d6/42/b5/d642b5236035c1c9612502eecd33c81f.jpg" alt="The characters from Dead by Daylight Legion and Ghostface both facing forward. Left: Legion - a person with a white mask with painted eyes and smile wearing a hoodie has hand up like a highfive. Right: Ghostface - a person with a long mask with saddened hollowed eyes, hollowed nostrils, and a long hollowed mouth with all black attire and a black hood, holding a half heart against Legion's hand." class="img-cont">
+                        <img src="https://i.imgur.com/11iVg1X.jpeg" alt="" class="img-cont">
                         <div class="image-subtitle">
                            <!-- <p>subtitle</p> -->
                         </div>
@@ -423,3 +423,4 @@ src="https://youtube.com/embed/b4VnMDg8mSc?si=CDCwChbvxPUIlOVo?controls=1" class
 
 
 </html>
+
