--- a/index.html
+++ b/index.html
@@ -286,7 +286,11 @@
                 <div class="about-content">
                     <section class="left-section">
                         <h2>About me</h2>
-                        <p>Game development has been a passion of mine since I became interested in games.  Recently I started persuing it, but I haven't had the time to focus on any personal projects.  Playing games has been my way of fun for most of my life; they are my biggest interest, and my biggest goal is to translate what I have inside my head onto a screen.</p>
+                        <p>My name is Dane Fournier, & I’ve been pursuing game development for the majority of my life.  In that time, I’ve built prototypes for games in Unity, Gamemaker, & Godot, with the most experience in Unity.</p>
+<br/>
+<p>My first steps towards game development were learning how to program.  I learned the fundamentals of programming in a robotics class in middle school, learned the foundation of C# a year later attempting my first prototype in Unity, kept building small prototypes,  then took a computer science class where I learned Java in my last year of high school, & finally formally learned Java, C++, & C# at Lonestar College.</p>
+<br/>
+<p>Beyond programming I’ve also taken Graphic Design & Animation classes at the high school & college level respectively, as well as learning basic 3D modelling with Blender.  I learned how to do all of these things because I wanted to understand at least some of the work that goes into every aspect of the creation of my favorite form of art.</p>
                     </section>
                     <section class="right-section">
                         <img src="https://i.imgur.com/11iVg1X.jpeg" alt="" class="img-cont">
@@ -423,4 +427,5 @@ src="https://youtube.com/embed/b4VnMDg8mSc?si=CDCwChbvxPUIlOVo?controls=1" class
 
 
 </html>
+
 
