--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
                         <h2>About me</h2>
                         <p>My name is Dane Fournier, & I’ve been pursuing game development for the majority of my life.  In that time, I’ve built prototypes for games in Unity, Gamemaker, & Godot, with the most experience in Unity.</p>
 <br/>
-<p>My first steps towards game development were learning how to program.  I learned the fundamentals of programming in a robotics class in middle school, learned the foundation of C# a year later attempting my first prototype in Unity, kept building small prototypes,  then took a computer science class where I learned Java in my last year of high school, & finally formally learned Java, C++, & C# at Lonestar College.</p>
+<p>My first steps towards game development were learning how to program.  I learned the fundamentals of programming in a robotics class in middle school. I learned the foundation of C# a year later attempting my first prototype in Unity. I kept building small prototypes,  and then took a computer science class where I learned Java in my last year of high school. Finally, I formally learned Java, C++, & C# at Lonestar College.</p>
 <br/>
-<p>Beyond programming I’ve also taken Graphic Design & Animation classes at the high school & college level respectively, as well as learning basic 3D modeling with Blender.  I learned how to do all of these things because I wanted to understand at least some of the work that goes into every aspect of the creation of my favorite form of art.</p>
+<p>Beyond programming, I’ve also taken Graphic Design & Animation classes at the high school & college level respectively, as well as learning basic 3D modeling with Blender.  I learned how to do all of these things because I wanted to understand at least some of the work that goes into every aspect of the creation of my favorite form of art.</p>
                     </section>
                     <section class="right-section">
                         <img src="https://i.imgur.com/11iVg1X.jpeg" alt="" class="img-cont">
@@ -335,7 +335,7 @@ src="https://youtube.com/embed/ivGlpg0SY-g?si=Rqc6DBKy6X5jy9Py?controls=1" class
                         <br/>
                         <h3>Boss Fight Prototype</h3>
                         <p><strong>Process</strong> -  I first reviewed the code in the project I was editing & adding my own on to, then 
-created a state machine to guide each action the boss character could do.  First I added 
+created a state machine to guide each action the boss character could do.  First, I added 
 the idle state, using it as a transition phase between the other states in the state machine.  
 Then I tested the distance between the player & the boss during its animations so when the 
 boss transitioned to its attacks, it would be in range.  Then I added in the attacks & the fight 
@@ -448,6 +448,7 @@ line of sight.  </p>
 
 
 </html>
+
 
 
 
