--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 <p>Beyond programming, I’ve also taken Graphic Design & Animation classes at the high school & college level respectively, as well as learning basic 3D modeling with Blender.  I learned how to do all of these things because I wanted to understand at least some of the work that goes into every aspect of the creation of my favorite form of art.</p>
                     </section>
                     <section class="right-section">
-                        <img src="https://i.imgur.com/11iVg1X.jpeg" alt="" class="img-cont">
+                        <img src="https://i.imgur.com/MaRF8h2.png" alt="" class="img-cont" alt="pixel art of a yellow duck sleeping in a cozy, poorly lit room.">
                         <div class="image-subtitle">
                            <!-- <p>subtitle</p> -->
                         </div>
@@ -448,6 +448,7 @@ line of sight.  </p>
 
 
 </html>
+
 
 
 
